Cleanup the profile preferences
Stop supporting the legacy profile preferences
Do not use unprefixed profile preference keys
Discard the 'save' button in the profile preference screen,
leaving it to act as any other preference screen.

TODO: need to validate that important profile fields aren't left blank.

--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -546,5 +546,6 @@
     <!-- Content description for a selected color square. -->
     <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
     <string name="pref_profile_color">Profile color</string>
+    <string name="misc">Miscellaneous</string>
 
 </resources>
