--- a/gearshift/src/main/res/values-ru/strings.xml
+++ b/gearshift/src/main/res/values-ru/strings.xml
@@ -106,8 +106,10 @@
     <string name="invalid_input_title">Неверный ввод</string>
     <string name="con_name_cannot_be_empty">Название профиля не может быть пустым</string>
     <string name="con_host_cannot_be_empty">Имя узла не может быть пустым</string>
+    <string name="con_port_not_valid">Значение порта должно быть в диапазоне от 1 до 65535</string>
     <string name="con_proxy_host_cannot_be_empty">Адрес прокси не может быть пустым</string>
-
+    <string name="con_proxy_port_not_valid">Значение порта прокси должно быть в диапазоне от 1 до 65535</string>
+	
     <string name="no_profiles">Профилей нет</string>
     <string name="create_profile_in_settings">Создайте новый профиль в настройках</string>
 
@@ -538,5 +540,14 @@
         <item>Включено</item>
         <item>Отключено</item>
     </string-array>
+	
+    <!-- Default title for color picker dialog [CHAR LIMIT=30] -->
+    <string name="color_picker_default_title">Выберите цвет</string>
+    <!-- Content description for a color square. -->
+    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
+    <!-- Content description for a selected color square. -->
+    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
+    <string name="pref_profile_color">Цвет профиля</string>
+    <string name="misc">Дополнительно</string>
 
 </resources>
