add a preference for the default value of the data removal checkbox

--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -549,5 +549,6 @@
     <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
     <string name="pref_profile_color">Profile color</string>
     <string name="misc">Miscellaneous</string>
+    <string name="delete_data_default">Delete the torrent data during removal by default</string>
 
 </resources>
