move to retrolambda
also always get the last download directory from the profile
preferences. Unlike most other profile properties, that one changes
quite often and some profile objects might be out of sync

--- a/gearshift/src/main/res/values-fr/strings.xml
+++ b/gearshift/src/main/res/values-fr/strings.xml
@@ -549,6 +549,6 @@
     <string name="color_swatch_description_selected">Couleur <xliff:g id="color_index" example="14">%1$d</xliff:g> selectionnée</string>
     <string name="pref_profile_color">Couleur du profil</string>
     <string name="misc">Divers</string>
-    <string name="delete_data_default">Par défaut, effacer les données lors de la suppression d'un torrent</string>
+    <string name="delete_data_default">Par défaut, effacer les données lors de la suppression d\'un torrent</string>
 
 </resources>
