Implement view hierarchy navigation in the main activity

--- a/gearshift2/src/main/res/values/strings.xml
+++ b/gearshift2/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="con_timeout">Timeout</string>
     <string name="con_path">Path</string>
     <string name="misc">Miscellaneous</string>
+    <string name="create_new_profile">Create a new profile</string>
 
 
     <string-array name="pref_con_retries_entries">
