--- a/gearshift2/src/main/res/values/strings.xml
+++ b/gearshift2/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="first_time_profile_title">Hi there</string>
     <string name="first_time_profile_subtitle">Please fill out all relevant information for access to your torrent server. You can adjust the profile later in the settings.</string>
     <string name="new_profile">New profile</string>
+    <string name="action_test">Test</string>
 
 
     <string-array name="pref_con_retries_entries">
