Add models for the various GUI torrent representations

--- a/gearshift2/src/main/res/values/strings.xml
+++ b/gearshift2/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
         <item>10 times</item>
         <item>15 times</item>
     </string-array>
+
+    <string name="tracker_unknown_host">Unknown host</string>
 </resources>
